--- a/part2/styles.css
+++ b/part2/styles.css
@@ -3,49 +3,36 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: black;
-    color: white ;
 }
 
 html,
 body {
     height: 100%;
     width: 100% ;
+    overflow-x: hidden ;
 }
 
 #page1 {
     height: 100% ;
     width: 100% ;
-    background-color: lightblue ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(61, 97, 109) ;
 }
+
 #page2 {
     height: 100% ;
     width: 100% ;
-    background-color: rgb(99, 158, 177) ;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#page2 h1{
-    margin: 20px ;
-    font-size: 38px;
+    background-color: rgb(99, 138, 151) ;
 }
 
 #page3 {
     height: 100% ;
     width: 100% ;
-    background-color: rgb(51, 107, 126) ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-color: rgb(63, 113, 129) ;
 }
 
-#box {
-    height: 200px ;
-    width: 200px ;
-    background-color: crimson;
+
+#page2 h1 {
+    font-size: 40vw ;
+    font-weight: 600;
+    text-transform: uppercase;
 }
